--- a/frontend/src/pages/contacts/ContactsPage.scss
+++ b/frontend/src/pages/contacts/ContactsPage.scss
@@ -338,6 +338,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
+    gap: 16px;
     padding-top: 16px;
     border-top: 1px solid var(--color-border);
   }
