--- a/frontend/src/shared/ui/SearchBox/SearchBox.scss
+++ b/frontend/src/shared/ui/SearchBox/SearchBox.scss
@@ -112,8 +112,13 @@
 
   @include mobile {
     flex-direction: column;
+    align-items: stretch;
     border-radius: $radius-2xl;
     padding: $spacing-lg;
+
+    &__icon {
+      display: none;
+    }
 
     &__input {
       width: 100%;
